# dumbo-runlim-xasp

./: .gitignore  pyproject.toml
dumbo_runlim_ucorexplain/: __main__.py
dumbo_runlim_ucorexplain/data/: latinsquare-9x9.xasp.asp
dumbo_runlim_xasp/data/: latinsquare-4x4.xasp.asp
